--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -9,12 +9,8 @@
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
-    "types": [
-      "node"
-    ]
+    "types": ["node"]
   },
-  "include": [
-    "src",
-    "prisma"
-  ]
+  "include": ["src"],
+  "exclude": ["prisma"]
 }
