--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,5 +11,21 @@ services:
     volumes:
       - app4something_pg:/var/lib/postgresql/data
 
+  api:
+    build:
+      context: ./server
+      dockerfile: Dockerfile
+    container_name: app4something-api
+    depends_on:
+      - db
+    environment:
+      # match server/.env; you can also mount .env if preferred
+      DATABASE_URL: postgresql://app:app@db:5432/app4something?schema=public
+      PORT: 3000
+      JWT_SECRET: please_change_me
+      NODE_ENV: production
+    ports:
+      - "3000:3000"
+
 volumes:
   app4something_pg:
