--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -2,21 +2,17 @@
 FROM node:20-alpine AS build
 WORKDIR /app
 
-# Copy manifests and install (devDeps included for TS compile)
-COPY package.json package-lock.json ./
-RUN npm ci
+# Only package.json (no lock file in server/)
+COPY package.json ./
+RUN npm install
 
-# Copy Prisma schema BEFORE generate; be explicit with --schema
+# Copy Prisma & source
 COPY prisma ./prisma
-
-# Copy TypeScript sources and tsconfig
 COPY tsconfig.json ./
 COPY src ./src
 
-# Generate Prisma client (needs node_modules + prisma/schema.prisma)
+# Generate prisma client and build
 RUN npx prisma generate --schema=./prisma/schema.prisma
-
-# Compile TS to JS
 RUN npm run build
 
 # ------------ Runtime stage ------------
@@ -24,17 +20,15 @@ FROM node:20-alpine AS runtime
 WORKDIR /app
 ENV NODE_ENV=production
 
-# Install only production deps
-COPY package.json package-lock.json ./
-RUN npm ci --omit=dev
+# Install only prod deps (no lock)
+COPY package.json ./
+RUN npm install --omit=dev
 
-# Copy built app and prisma folder (migrations, schema if needed)
+# Bring built app + prisma
 COPY --from=build /app/dist ./dist
 COPY --from=build /app/prisma ./prisma
 
-# Safe to run generate again (keeps client in sync)
 RUN npx prisma generate --schema=./prisma/schema.prisma
 
-# Port & startup
 EXPOSE 3000
 CMD ["/bin/sh", "-c", "npx prisma migrate deploy --schema=./prisma/schema.prisma && node dist/index.js"]
