--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,16 +1,13 @@
 {
   "compilerOptions": {
     "target": "ES2022",
-    "module": "NodeNext",
-    "moduleResolution": "NodeNext",
-    "outDir": "dist",
+    "module": "CommonJS",
     "rootDir": "src",
+    "outDir": "dist",
     "strict": true,
     "esModuleInterop": true,
-    "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true,
-    "types": ["node"]
+    "skipLibCheck": true
   },
-  "include": ["src"],
-  "exclude": ["prisma"]
+  "include": ["src/**/*.ts"],
+  "exclude": ["node_modules", "dist", "prisma/**"]
 }
