--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,5 @@
 # Local Docker Postgres
-DATABASE_URL="postgresql://app:app@localhost:5432/app4something?schema=public"
-JWT_SECRET="dev-secret-change-me"
-PORT=4000
-CORS_ORIGIN="http://localhost:5173"
+DATABASE_URL="postgresql://postgres:IlcteoDrKTuRzNEDDZmDWxvMajNphuZL@postgres.railway.internal:5432/railway"
+JWT_SECRET="ajiagasga3woaotnaoig92908j1ha"
+PORT=3000
+CORS_ORIGIN="https://app4something-production.up.railway.app"
